[package]
name = "eddb"
version = "0.0.1-dev+alpha"
authors = ["Nathan Lilienthal <nathan@nixpulvis.com>"]
edition = "2018"

[dependencies]
csv = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
chrono = { version = "*", features = ["serde"] }

[dependencies.elite_journal]
git = "https://github.com/ED-NEWP/elite_journal"
